<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Emergency Room</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_nurse">Nurse Options</string>
    <string name="patient_name">First name, Last name</string>
    <string name="patient_birthdate">YYYY-MM-DD</string>
    <string name="patient_health_card">   Health Card Number</string>
    <string name="register_new_patient">Register New Patient</string>
    <string name="register_patient">Register Patient</string>
    <string name="find_patient">Find Patient</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="title_activity_record">Record Patient</string>
    <string name="temperature">Temperature</string>
    <string name="systole">Blood pressure in systolic</string>
    <string name="diastole">Blood pressure in diastolic</string>
    <string name="heart_rate">Heart rate</string>
    <string name="update_record">Update Vital Signs</string>
    <string name="show_record">Record Display</string>
    <string name="title_activity_register_patient">Register New Patient</string>
    <string name="title_activity_update_record">Update Record</string>
    <string name="title_activity_checkup">Checkup Patient</string>
    <string name="update_vital_signs">Update Vital Signs</string>
    <string name="title_activity_show_record">Record Display</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_nurse_login">Nurse Login</string>
    <string name="new_prescription">New Prescription</string>
    <string name="welcome_user">Welcome!\nPlease select an activity:</string>
    <string name="add_value">Add</string>
    <string name="title_activity_physician">Physician Options</string>
    <string name="title_activity_prescription">Add Prescription</string>
    <string name="nurse">Nurse</string>
    <string name="physician">Physician</string>
    <string name="select_user">Welcome,\nPlease select your user type:</string>
    <string name="title_activity_physician_login">Physician Login</string>
    <string name="text_selected_nurse">Usertype: Nurse</string>
    <string name="text_selected_physician">Usertype: Physician</string>
    <string name="checkup">Check Up</string>
    <string name="checkup_patient">Check Up Patient</string>
    <string name="title_activity_order_patient">Ordered Patients</string>
    <string name="order_patient">Ordered Patients</string>

</resources>