<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NurseActivity" >

    <TextView
        android:id="@+id/welcome_nurse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/welcome_user"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <Button
        android:id="@+id/register_new_patient"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/welcome_nurse"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:onClick="registerPatient"
        android:textSize="15sp"
        android:text="@string/register_new_patient" />

     <Button
         android:id="@+id/update_vital_signs"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_alignLeft="@+id/register_new_patient"
         android:layout_alignRight="@+id/register_new_patient"
         android:layout_below="@+id/register_new_patient"
         android:layout_marginTop="23dp"
         android:textSize="15sp"
         android:onClick="updateRecord"
         android:text="@string/update_vital_signs" />

     <Button
         android:id="@+id/show_record"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_alignLeft="@+id/update_vital_signs"
         android:layout_alignRight="@+id/update_vital_signs"
         android:layout_below="@+id/update_vital_signs"
         android:layout_marginTop="23dp"
         android:textSize="15sp"
         android:onClick="showRecord"
         android:text="@string/show_record" />
     
	<Button
         android:id="@+id/checkup"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_alignLeft="@+id/show_record"
         android:layout_alignRight="@+id/show_record"
         android:layout_below="@+id/show_record"
         android:layout_marginTop="23dp"
         android:textSize="15sp"
         android:onClick="checkUp"
         android:text="@string/checkup_patient" />

     <Button
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="30dp"
         android:onClick="back"
         android:textSize="15sp"
         android:text="@string/back" />

     <Button
         android:id="@+id/show_order_patient"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_above="@+id/back"
         android:layout_alignLeft="@+id/checkup"
         android:layout_alignRight="@+id/checkup"
         android:layout_marginBottom="15dp"
         android:onClick="orderPatient"
         android:textSize="15sp"
         android:text="@string/order_patient" />

</RelativeLayout>