<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/nurse_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName" />
           
        <requestFocus />

    <EditText
        android:id="@+id/nurse_password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nurse_name_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" >

    </EditText>

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nurse_password_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/error"
        android:layout_marginTop="40dp"
        android:layout_alignLeft="@+id/nurse_password_field"
        android:minWidth="96dip"
        android:onClick="register"
        android:textSize="15sp"
        android:text="@string/register" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="back"
        android:textSize="15sp"
        android:text="@string/back" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignBaseline="@+id/register"
        android:layout_alignBottom="@+id/register"
        android:layout_alignRight="@+id/nurse_password_field"
        android:minWidth="96dip"
        android:onClick="login"
        android:textSize="15sp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/selected_user_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/text_selected_nurse"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>