<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

	<Button
	    android:id="@+id/select_nurse"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/select_doctor"
	    android:layout_below="@+id/select_doctor"
	    android:layout_marginTop="27dp"
	    android:onClick="selectNurse"
	    android:text="@string/nurse" />

	<TextView
	    android:id="@+id/welcome_message"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:text="@string/select_user"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<Button
	    android:id="@+id/select_doctor"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/welcome_message"
	    android:layout_below="@+id/welcome_message"
	    android:layout_marginTop="50dp"
	    android:onClick="selectDoctor"
	    android:text="@string/physician" />
    
</RelativeLayout>